[package]
name = "squark-macros"
version = "0.5.1"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Macros like JSX to help building Squark application"

[lib]
proc-macro = true

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.6"

[dev-dependencies]
squark = { path = "../squark", version = "0.5" }
