[package]
name = "squark-stdweb"
version = "0.1.0"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
license = "WTFPL"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Squark runtime implemiontion for web browser with using stdweb"

[dependencies]
squark = { "path" = "../squark", version = "0.1.1" }
stdweb = "0.4.2"
serde_json = "1.0.13"
serde = "1.0.34"
