[package]
name = "squark-web"
version = "0.1.2"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Squark runtime implemiontion for web browser with using wasm-bindgen"

[dependencies]
serde_json = "1.0.13"
serde = "1.0.34"
squark = { path = "../squark", version = "0.6.0" }
wasm-bindgen = { version = "0.2.19", features = [ "nightly", "serde-serialize" ] }
js-sys = "0.3.2"
