[package]
name = "squark-web"
version = "0.3.0"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
categories = ["gui", "web-programming", "wasm"]
description = "Squark runtime implemiontion for web browser with using wasm-bindgen"
edition = "2018"

[dependencies]
serde_json = "1.0.13"
serde = "1.0.101"
squark = { path = "../squark", version = "0.7.0" }
wasm-bindgen = { version = "0.2.19", features = [ "nightly", "serde-serialize" ] }
js-sys = "0.3.27"
futures = "0.1.29"
wasm-bindgen-futures = "0.3.6"

[dependencies.web-sys]
version = "0.3.2"
features = [
  'Window',
  'Document',
  'DomStringMap',
  'Element',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Text',
  'Event',
  'InputEvent',
  'KeyboardEvent',
]
