[package]
name = "squark-web"
version = "0.3.0"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
categories = ["gui", "web-programming", "wasm"]
description = "Squark runtime implemiontion for web browser with using wasm-bindgen"
edition = "2018"

[dependencies]
serde_json = "1.0.41"
serde = "1.0.101"
squark = { path = "../squark", version = "0.7.0" }
wasm-bindgen = { version = "0.2.54", features = [ "nightly", "serde-serialize" ] }
js-sys = "0.3.28"
futures = "0.1.29"
wasm-bindgen-futures = "0.4.1"

[dependencies.web-sys]
version = "0.3.28"
features = [
  'Window',
  'Document',
  'DomStringMap',
  'Element',
  'EventTarget',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Text',
  'Event',
  'InputEvent',
  'KeyboardEvent',
]
