[package]
name = "squark"
version = "0.2.0"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Virtual DOM implemention and application definition inspired from HyperApp"

[dependencies]
uuid = "0.6.2"
rand = { version = "0.5.0-pre.0", features = ["stdweb"] }
serde_json = "1.0.13"
