[package]
name = "squark"
version = "0.6.1"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Virtual DOM implemention and application definition inspired from HyperApp"

[dependencies]
uuid = "0.7.1"
serde_json = "1.0.13"
rand = { version = "0.6.0-pre.0", features = [ "wasm-bindgen" ] }
