[package]
name = "squark"
version = "0.7.1"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
repository = "https://github.com/rail44/squark"
homepage = "https://github.com/rail44/squark"
license = "WTFPL"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
description = "Virtual DOM implemention and application definition inspired from HyperApp"
edition = "2018"

[dependencies]
uuid = "0.7.1"
serde_json = "1.0.13"
rand = { version = "0.7.2", features = [ "wasm-bindgen" ] }
rustc-hash = "1.0.1"
futures = "0.1.25"
serde = "1.0.82"
